Fix wrapped pills breadcrumbs

--- a/css/colormag.less
+++ b/css/colormag.less
@@ -1903,20 +1903,25 @@ body.pagenav-flip #colormag__pagenav .secondary .breadcrumbs div.flex {
     margin: 0;
 }
 
-#colormag__pagenav.pills-look .breadcrumbs ul a {
+[dir] #colormag__pagenav.pills-look .breadcrumbs ul li {
+    margin-top: .2rem;
+    margin-bottom: .2rem;
+}
+
+#colormag__pagenav.pills-look .breadcrumbs ul li a {
     text-decoration: none;
     position: relative;
 }
 
-[dir] #colormag__pagenav.pills-look .breadcrumbs ul a {
+[dir] #colormag__pagenav.pills-look .breadcrumbs ul li a {
     padding: .7em 1em;
 }
 
-[dir=ltr] #colormag__pagenav.pills-look .breadcrumbs ul a {
+[dir=ltr] #colormag__pagenav.pills-look .breadcrumbs ul li a {
     float: left;
 }
 
-[dir=rtl] #colormag__pagenav.pills-look .breadcrumbs ul a {
+[dir=rtl] #colormag__pagenav.pills-look .breadcrumbs ul li a {
     float: right;
 }
 
