--- a/css/src/colormag.less
+++ b/css/src/colormag.less
@@ -1522,7 +1522,12 @@ body.pagenav-flip #colormag__pagenav .secondary .breadcrumbs div.flex span.label
     margin: 0;
 }
 
-#colormag__pagenav.pills-look .breadcrumbs ul a {
+#colormag__pagenav.pills-look .breadcrumbs ul li {
+    margin-top: .2rem;
+    margin-bottom: .2rem;
+}
+
+#colormag__pagenav.pills-look .breadcrumbs ul li a {
     padding: .7em 1em;
     float: left;
     text-decoration: none;
